--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/logo-bow.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-bow.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +20,39 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Gamut Exchange</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q0F5J2KR1S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q0F5J2KR1S');
+</script>
+<meta name="title" content="Gamut Exchange | Algorithmic Automated Market Maker">
+<meta name="description" content=" Recent advancements in decentralized finance DeFi have resulted in a rapid increase in the use of  Automated Market Makers AMMs for creating Find, Generates 33% More Profit Per Trade Average on gamut exchange">
+<meta name="keywords" content="DeFi Crypto,Market Making,liquidity crypto">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+
+
+<link rel="canonical" href="https://www.gamut.exchange/" />
+<meta name="google-site-verification" content="WC59oh5s6QE_rzZcAW3mjU0wb_BxW25phZor25zepr4" />
+
+
+<script type='application/ld+json'>{
+    "@context": "https://schema.org/",
+    "@type": "CreativeWorkSeries",
+    "name": "Gamut",
+    "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5",
+        "bestRating": "5",
+        "ratingCount": "980"
+    }
+}</script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
